--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "bumbummen99/shoppingcart": "^3.0",
         "cohensive/embed": "^5.5",
+        "consoletvs/charts": "^6.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
